dark mode fixed :D

--- a/src/Styles/About.css
+++ b/src/Styles/About.css
@@ -1,16 +1,4 @@
 /* About.css */
-:root{
-  --background-about: #fff;
-  --font-color: #000;
-  --border-bottom: 2px solid #000000;
-
-}
-.darkmode{
-  --background-about: #000;
-  --font-color: #ffffff;
-  --border-bottom: 2px solid #ffffff;
-}
-
 .body3{
   background-color:var(--background-color);
 }
