--- a/src/Styles/Catergory.css
+++ b/src/Styles/Catergory.css
@@ -1,16 +1,4 @@
-:root{
-    --background-color: #fff;
-    --border-top: 1px solid #000;
-    --author: #808080;
-    --catergory-title: #000;
 
-}
-.darkmode{
-    --background-color: #000000;
-    --border-top: 1px solid #ffffff;
-    --author: #808080;
-    --catergory-title: #f8f6f6;
-}
 .body2{
     background-color: var(--background-color);
 }
@@ -31,7 +19,7 @@
 }
 
 .page-title {
-    color: var(--background-color);
+    color: var(--text-color);
     font-size: 3rem;
     font-weight: bold;
     text-align: center;
@@ -47,6 +35,7 @@
 }
 
 .article {
+
     display: flex;
     border-top: 1px solid #000000;
     padding-top: 20px;
@@ -65,6 +54,7 @@
 }
 
 .article-title {
+    color: var(--catergory-title);
     font-size: 1.5rem;
     font-weight: bold;
     margin: 0;
